<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_roots"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/my_poster"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/poster_home_my_poster" />

            <TextView
                android:id="@+id/collection"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/poster_home_my_collection" />

            <TextView
                android:id="@+id/unfinish"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/poster_home_unfinish" />

            <TextView
                android:id="@+id/poster_lib"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/poster_home_lib" />

            <TextView
                android:id="@+id/fine_poster"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/poster_home_fine_poster" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="matrix"
            android:src="@drawable/a" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/divider_color" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vPager"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:background="#000000"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nav_poster_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_home"
            android:paddingTop="5dp"
            android:drawableTop="@drawable/return_home_btn"
            android:gravity="center_horizontal"
            android:text="@string/nav_home"
            android:textColor="@color/poster_home_nav_text"
            android:textSize="@dimen/poster_home_nav_text" />

        <TextView
            android:id="@+id/nav_new_make"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:drawableTop="@drawable/make_newposter_normal"
            android:gravity="center"
            android:text="@string/nav_new_make"
            android:textColor="@color/poster_home_nav_text"
            android:textSize="@dimen/poster_home_nav_text" />

        <TextView
            android:id="@+id/nav_my_poster"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:drawableTop="@drawable/myposter_normal"
            android:gravity="center"
            android:text="@string/nav_my_poster"
            android:textColor="@color/poster_home_nav_text"
            android:textSize="@dimen/poster_home_nav_text" />

        <TextView
            android:id="@+id/nav_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:drawableTop="@drawable/share_normal"
            android:gravity="center"
            android:text="@string/nav_share"
            android:textColor="@color/poster_home_nav_text"
            android:textSize="@dimen/poster_home_nav_text" />
    </LinearLayout>

</LinearLayout>