<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    android:orientation="vertical" >

   <View 
       android:id="@+id/null_view"
       android:layout_width="wrap_content"
       android:layout_height="0dp"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/white" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/edit_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="@color/bg_red"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_color" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/corners_consume_pop_bg"
        android:padding="10dp"
        android:gravity="top"
        android:text="@string/edit_text"
        android:textColor="#8e8e8e"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/font"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/corners_edit_text_bg"
            android:gravity="center"
            android:text="@string/font" />

        <TextView
            android:id="@+id/color"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="@dimen/divider"
            android:background="@color/edit_text_bg"
            android:gravity="center"
            android:text="@string/color" />

        <TextView
            android:id="@+id/animation"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="@dimen/divider"
            android:background="@color/edit_text_bg"
            android:gravity="center"
            android:text="@string/animation" />

        <TextView
            android:id="@+id/bg_color"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="@dimen/divider"
            android:background="@drawable/corners_edit_text_right_bg"
            android:gravity="center"
            android:text="@string/bg_color" />

        <TextView
            android:id="@+id/preview"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="15dp"
            android:background="@drawable/edit_preview_btn"
            android:gravity="center" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/corners_edit_preview_bg" >

        <ImageView
            android:id="@+id/preview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/translucent_home_bg"
            android:padding="5dp"
            android:text="@string/edit_text"
            android:textColor="#8e8e8e"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete_borad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_delete_board_btn"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_click_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@drawable/edit_add_function_btn" />
    </LinearLayout>

</LinearLayout>