<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.shenzhoumeiwei.vcanmou.view.CameraSurfaceView
            android:id="@+id/camera_surfaceview"
            android:layout_width="0dip"
            android:layout_height="0dip" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/take_photo_title_height"
        android:background="@color/black" >

        <TextView
            android:id="@+id/camera_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:background="@drawable/camera_switch_normal" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21dp"
            android:button="@drawable/checkbox"
            android:text="@string/camera_close"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/black" >

        <TextView
            android:id="@+id/take_photo_return"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@color/red_home"
            android:drawableTop="@drawable/edit_return_btn"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/edit_return"
            android:textColor="@color/white"
            android:textSize="@dimen/poster_home_nav_text" />

        <Button
            android:id="@+id/btn_shutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/take_photo_btn" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/camera_focal_length" />
 
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignLeft="@+id/textView1"
        android:background="@drawable/rect_camera_bg"
        android:layout_marginBottom="28dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:text="@string/text_board_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginBottom="18dp"
        android:layout_toLeftOf="@+id/imageView1"
        android:background="@drawable/rect_camera_bg"
        android:padding="5dp"
        android:text="@string/text_board_hide"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>