<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/page_set"
        android:textSize="@dimen/page_set_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginTop="23dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:layout_alignParentTop="true"
            android:background="@color/divider_color" />

        <ImageView
            android:id="@+id/merchant_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/sophie" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/arrow"
            android:layout_toRightOf="@id/merchant_logo"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/merchant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="俏江南" />

            <TextView
                android:id="@+id/merchant_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="俏江南已经成为了中国最具发展潜力的国际餐饮服务管理公司之一。" />

            <TextView
                android:id="@+id/merchant_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="俏江南" />
        </LinearLayout>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="17dp"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_color" />
    </RelativeLayout>

    <TextView
        android:id="@+id/bg_set"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:text="@string/bg_set" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/music_set"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:text="@string/music_set" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/belong_class_set"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:text="@string/belong_class_set" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/poster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/poster_home_nav_text"
        android:text="XX商户   XXX的海报  02" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/public_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/public_set" />

        <com.shenzhoumeiwei.vcanmou.view.Switch
            android:id="@+id/set_notice_switch"
            style="@style/Switch"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:checked="true"
            android:clickable="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/poster_home_nav_text"
        android:text="@string/set_notice" />

</LinearLayout>